--- a/Home.html
+++ b/Home.html
@@ -31,7 +31,7 @@
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Home.html" data-home-page-title="Home" data-path-to-root="./" data-include-products="false" class="u-body u-overlap u-overlap-contrast u-overlap-transparent u-stick-footer u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-c6fe"><div class="u-clearfix u-sheet u-sheet-1">
+  <body data-path-to-root="./" data-include-products="false" class="u-body u-overlap u-overlap-contrast u-overlap-transparent u-stick-footer u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-c6fe"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="500" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0">
           <img src="images/LEVELOGIC3.png" class="u-logo-image u-logo-image-1">
         </a>
